--- a/articles/site-recovery/site-recovery-faq.yml
+++ b/articles/site-recovery/site-recovery-faq.yml
@@ -4,12 +4,12 @@ metadata:
   description: In diesem Artikel werden häufig gestellte allgemeine Fragen zu Azure Site Recovery behandelt.
   ms.topic: conceptual
   ms.date: 05/27/2021
-  ms.openlocfilehash: f2a5f42b4e65f9f801ae6a56af13ed5e8a6d8080
-  ms.sourcegitcommit: 8942cdce0108372d6fc5819c71f7f3cf2f02dc60
+  ms.openlocfilehash: e652f3f293d793cdf1d10d7f3b9ceee84f60f4c7
+  ms.sourcegitcommit: e832f58baf0b3a69c2e2781bd8e32d4f1ae932c6
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 07/01/2021
-  ms.locfileid: "113136818"
+  ms.lasthandoff: 05/27/2021
+  ms.locfileid: "111907295"
 title: Allgemeine Fragen zu Azure Site Recovery
 summary: >
   Dieser Artikel fasst häufig gestellte Fragen zur Azure Site Recovery zusammen. In den folgenden Artikeln werden spezielle Szenarien behandelt:
@@ -342,7 +342,7 @@ sections:
       Sehen Sie sich das folgende Beispiel für eine Replikationsrichtlinie an, um zu verstehen, wie Site Recovery Wiederherstellungspunkte generiert. Diese Replikationsrichtlinie verfügt über einen Wiederherstellungspunkt mit einem Aufbewahrungszeitfenster von 24 Stunden und einem Intervall von 1 Stunde für anwendungskonsistente Momentaufnahmen.
 
 
-      Site Recovery erstellt alle 5 Minuten einen absturzkonsistenten Wiederherstellungspunkt. Der Benutzer kann diese Häufigkeit nicht ändern. Für die letzte Stunde können Sie zwischen zwölf absturzkonsistenten und einem App-konsistenten Punkt wählen. Im Lauf der Zeit löscht Site Recovery alle Wiederherstellungspunkte, die älter als eine Stunde sind, und speichert nur einen Wiederherstellungspunkt pro Stunde bis zu 24 Stunden und nur einen Wiederherstellungspunkt alle zwei Stunden bis zu 72 Stunden.
+      Site Recovery erstellt alle 5 Minuten einen absturzkonsistenten Wiederherstellungspunkt. Der Benutzer kann diese Häufigkeit nicht ändern. Für die letzte Stunde können Sie zwischen 12 absturzkonsistenten und einem App-konsistenten Punkt wählen. Im Lauf der Zeit löscht Site Recovery alle Wiederherstellungspunkte, die älter als 1 Stunde sind, und speichert nur einen Wiederherstellungspunkt pro Stunde.
 
 
       Der folgende Screenshot veranschaulicht dieses Beispiel. Im Screenshot:
