--- a/articles/virtual-machine-scale-sets/virtual-machine-scale-sets-faq.yml
+++ b/articles/virtual-machine-scale-sets/virtual-machine-scale-sets-faq.yml
@@ -9,12 +9,12 @@ metadata:
   ms.date: 06/30/2020
   ms.reviewer: jushiman
   ms.custom: mimckitt
-  ms.openlocfilehash: 2888e704cf124cf37a4ed93dba9a804c1a4da483
-  ms.sourcegitcommit: 3bb9f8cee51e3b9c711679b460ab7b7363a62e6b
+  ms.openlocfilehash: 3fd3f0f7af11a2354a89fc86344bef44b0cffa07
+  ms.sourcegitcommit: 16580bb4fbd8f68d14db0387a3eee1de85144367
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 06/14/2021
-  ms.locfileid: "112082221"
+  ms.lasthandoff: 06/24/2021
+  ms.locfileid: "112676450"
 title: Häufig gestellte Fragen zu Azure-VM-Skalierungsgruppen
 summary: Hier erhalten Sie Antworten auf häufig gestellte Fragen zu VM-Skalierungsgruppen in Azure.
 sections:
@@ -263,7 +263,7 @@ sections:
       ```
 
 
-      linuxConfiguration-Elementname | Erforderlich | Typ | BESCHREIBUNG
+      linuxConfiguration-Elementname | Erforderlich | type | BESCHREIBUNG
 
       --- | --- | --- | ---
 
@@ -404,7 +404,7 @@ sections:
   - question: >
       Können verwaltete Identitäten für Azure-Ressourcen zusammen mit einer VM-Skalierungsgruppe verwendet werden?
     answer: >
-      Ja. Einige MSI-Beispielvorlagen [finden](../active-directory/managed-identities-azure-resources/overview.md) Sie in den Azure-Schnellstartvorlagen für [Linux](https://github.com/Azure/azure-quickstart-templates/tree/master/201-vmss-msi) und [Windows](https://github.com/Azure/azure-quickstart-templates/tree/master/201-vmss-msi).
+      Ja. Einige MSI-Beispielvorlagen [finden](../active-directory/managed-identities-azure-resources/overview.md) Sie in den Azure-Schnellstartvorlagen für [Linux](https://github.com/Azure/azure-quickstart-templates/tree/master/quickstarts/microsoft.compute/vmss-msi) und [Windows](https://github.com/Azure/azure-quickstart-templates/tree/master/quickstarts/microsoft.compute/vmss-msi).
 - name: Wird gelöscht
   questions:
   - question: >
@@ -494,19 +494,6 @@ sections:
       Meine VM-Skalierungsgruppenerweiterung versucht, etwas installieren, das einen Neustart erfordert.
     answer: >
       Wenn Ihre VM-Skalierungsgruppenerweiterung versucht, etwas installieren, das einen Neustart erfordert, können Sie die Erweiterung „Azure Automation Desired State Configuration (Automation DSC)“ verwenden. Bei Verwendung des Betriebssystems Windows Server 2012 R2 führt Azure das WMF 5.0-Setup (Windows Management Framework) aus, startet neu und setzt dann die Konfiguration fort.
-  - question: >
-      Wie aktiviere ich Antischadsoftware in meiner VM-Skalierungsgruppe?
-    answer: >
-      Antischadsoftware können Sie in Ihrer VM-Skalierungsgruppe mithilfe des folgenden PowerShell-Beispiels aktiveren:
-
-
-      ```powershell
-
-      $rgname = 'autolap'
-
-      $vmssname = 'autolapbr'
-
-      $location = 'eastus'
   - question: >
       Wie führe ich ein benutzerdefiniertes Skript aus, das in einem privaten Speicherkonto gehostet wird?
     answer: >
