--- a/articles/baremetal-infrastructure/toc.yml
+++ b/articles/baremetal-infrastructure/toc.yml
@@ -78,7 +78,7 @@
             - name: 'Bereitstellen von Azure Monitor für SAP-Lösungen: Azure PowerShell'
               href: ../virtual-machines/workloads/sap/azure-monitor-sap-quickstart-powershell.md?context=%2fazure%2fbaremetal-infrastructure%2fworkloads%2fsap%2fcontext%2fcontext
             - name: Häufig gestellte Fragen zu Azure Monitor für SAP-Lösungen
-              href: ../virtual-machines/workloads/sap/azure-monitor-faq.yml?context=%2fazure%2fbaremetal-infrastructure%2fworkloads%2fsap%2fcontext%2fcontext
+              href: ../virtual-machines/workloads/sap/azure-monitor-faq.md?context=%2fazure%2fbaremetal-infrastructure%2fworkloads%2fsap%2fcontext%2fcontext
         - name: Anleitung
           items:
             - name: HA-Einrichtung mit STONITH
