--- a/articles/cognitive-services/personalizer/toc.yml
+++ b/articles/cognitive-services/personalizer/toc.yml
@@ -12,7 +12,7 @@
       href: whats-new.md
       displayName: 'release notes, service updates, videos'
     - name: Häufig gestellte Fragen zur Personalisierung
-      href: frequently-asked-questions.md
+      href: frequently-asked-questions.yml
       displayName: 'frequently asked questions, troubleshooting, questions'
 - name: Schnellstart
   href: ./quickstart-personalizer-sdk.md
