--- a/articles/cognitive-services/Speech-Service/index.yml
+++ b/articles/cognitive-services/Speech-Service/index.yml
@@ -7,12 +7,12 @@ metadata:
   titleSuffix: Azure Cognitive Services
   services: cognitive-services
   description: 'Nutzen Sie Spracherkennung und Sprachsynthese, profitieren Sie von Übersetzungen in Echtzeit, transkribieren Sie Konversationen, oder integrieren Sie Sprachfunktionen in Ihren Bot.'
-  author: trevorbye
+  author: laujan
   manager: nitinme
   ms.service: speech-service
   ms.topic: hub-page
   ms.date: 03/24/2020
-  ms.author: trbye
+  ms.author: lajanuar
 highlightedContent:
   items:
     - title: Worum handelt es sich beim Speech-Dienst?
