--- a/articles/applied-ai-services/toc.yml
+++ b/articles/applied-ai-services/toc.yml
@@ -12,11 +12,11 @@
 - name: Schnellstarts
   items:
     - name: Azure-Formularerkennung
-      href: ../cognitive-services/form-recognizer/quickstarts/get-started-with-form-recognizer.md
+      href: ./form-recognizer/quickstarts/get-started-with-form-recognizer.md
     - name: Azure Metrics Advisor
-      href: ../cognitive-services/metrics-advisor/quickstarts/web-portal.md
+      href: ./metrics-advisor/quickstarts/web-portal.md
     - name: Plastischer Reader in Azure
-      href: ../cognitive-services/immersive-reader/quickstarts/client-libraries.md
+      href: ./immersive-reader/quickstarts/client-libraries.md
     - name: Azure Cognitive Search
       href: ../search/search-get-started-portal.md
     - name: Azure Video Analyzer
